finalized and tested

--- a/client/templates/chat.html
+++ b/client/templates/chat.html
@@ -12,7 +12,7 @@
               <img ng-src="{{ message.picture }}">
             </div>
           </ng-switch>
-          <span class="message-timestamp">{{ message.timestamp | amDateFormat: 'HH:MM' }}</span>
+          <span class="message-timestamp">{{ message.timestamp | amDateFormat: 'HH:mm' }}</span>
         </div>
       </div>
     </div>
